--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 weather.url = https://api.darksky.net/forecast
-weather.api_secret=${WEATHER_API_KEY}
+weather.api_secret=ed96410906de78e1bc5a2f8e58f5d831
 
 spring.datasource.url = jdbc:postgresql://127.0.0.1:15432/postgres
 spring.datasource.username = testuser
