--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 weather.url = https://api.darksky.net/forecast
 weather.api_secret=ed96410906de78e1bc5a2f8e58f5d831
 
-spring.datasource.url = jdbc:postgresql://127.0.0.1:15432/postgres
+# db container IP will be replaced during deployment
+spring.datasource.url = jdbc:postgresql://db:5432/postgres
 spring.datasource.username = testuser
 spring.datasource.password = password
 spring.datasource.platform = POSTGRESQL
